--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,12 @@ dependencies:
   share_plus: ^7.2.1
   url_launcher: ^6.2.5
   url_launcher_android: ^6.2.5
+  flutter_local_notifications: ^17.0.0
+  intl: ^0.18.1
+  loading_animation_widget: ^1.2.0
+  flutter_launcher_icons: ^0.13.1
 
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -83,3 +87,7 @@ flutter:
     - assets/heart_filled.png
     - assets/Search_duotone.png
     - assets/Heart_duotone.png
+
+flutter_icons:
+  android: true
+  image_path: "assets/logo.png"
